#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-08-09
2013-08-01 Andy Salnikov
- finish implementation of HDF5 writing piece

Tag: V00-08-08
2013-07-29 Andy Salnikov
- add empty implementation of store_Type_vN() methods

Tag: V00-08-07
2013-07-17 David Schneider
- In the python wrappers, psddl_pytyon, creating docstrings for classes and methods 
  by passing the DDL comments to the appropriate boost python method.

Tag: V00-08-06
2013-07-17 David Schneider
- Exporting the pstype version and TypeId into the python wrappers.

Tag: V00-08-05
2013-07-16 Andy Salnikov
- psana backend:
  - get rid of pragma pack
  - do not generate overloaded methods for ndarray return type

Tag: V00-08-04
2013-07-16 Andy Salnikov
- few small fixed for problems noticed by pylint
- add comments to the methods returning ndarrays concerning lifetime
  of the returned objects

Tag: V00-08-03
2013-07-11 Andy Salnikov
- move some pieces of code from DdlPds2Psana.py into data/templates/pds2psana.tmpl

Tag: V00-08-02
2013-07-10 David Schneider
- checking in new python wrappers that have been generated to export the enums 
  and constants from the pstypes.
	
Tag: V00-08-01
2013-07-10 Andy Salnikov
- cppcodegen.tmpl: fixt for type array data in new template stuff
- pds2psana backend: pass owner shared pointer to the pdsdata
  methods returning ndarray

Tag: V00-08-00
2013-07-10 Andy Salnikov
- more templates
- switching to templated classes in pds2psana backend

Tag: V00-07-01
2013-07-02 Andy Salnikov
- a bit more refactoring and simplification of templates
- adding code to store data

Tag: V00-07-00
2013-07-01 Andy Salnikov