@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-08-10
+2013-08-14 Andy Salnikov
+- fix policy for methods returning reference to non-copyable type
+
 Tag: V00-08-09
 2013-08-01 Andy Salnikov
 - finish implementation of HDF5 writing piece
